Spring Data JPA Changelog
=============================================

Changes in version 1.0.0.RC1 
----------------------------------------
* Improved performance of query execution by uhsing method.getAnnotation(…) instead of AnnotationUtils.getAnnotation(…)

Changes in version 1.0.0.M2 (2011-03-24) - https://jira.springsource.org/browse/DATAJPA/fixforversion/11800
----------------------------------------
* Dynamic sorting functionality (through Sort query method parameter) works again
* Added support for 'Distinct' (DATACMNS-15)
* Added support for 'In' and 'NotIn' (DATAJPA-30)
* Adapted new metadata API (DATAJPA-32, DATACMNS-17)
* Support for XML based entity mapping (DATAJPA-28)
* @Query annotated queries get validated on Query meta-model creation (DATAJPA-14)
* Fixed dependency scopes and missing repository declarations (DATAJPA-33, DATAJPA-26)
* Adapted meta-model API from Commons module (DATAJPA-32)
* Added support for QueryDsl (DATAJPA-8)

Changes in version 1.0.0.M1 (2011-02-10) - https://jira.springsource.org/browse/DATAJPA/fixforversion/11786
----------------------------------------
* Moved JPA sepcific code from Hades into Spring Data JPA (functional equivalent of Hades 2.0.2) building on common functionality in Spring Data Commons